--- a/src/index.html
+++ b/src/index.html
@@ -4,7 +4,8 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width">
-  <title>Webpack Babel React revisited</title>
+  <title>My React Redux Router Isomorphic Boilerplate</title>
+  <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 
 <body>
