--- a/src/index.html
+++ b/src/index.html
@@ -5,11 +5,10 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width">
   <title>My React Redux Router Isomorphic Boilerplate</title>
-  <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 
 <body>
-  <div id="app"></div>
+  <div id="root"></div>
 </body>
 
 </html>
